--- a/public/murban.html
+++ b/public/murban.html
@@ -3,104 +3,105 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>MURBAN 777 - DAMX STORE</title>
+  <title>MURBAN 777 | DAMX STORE</title>
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #0d1117;
-      color: #f0f0f0;
-    }
-
-    .container {
-      max-width: 900px;
-      margin: 50px auto;
+      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #0f0f0f, #1f1f1f);
+      color: #fff;
       padding: 20px;
-      background: #161b22;
-      border-radius: 12px;
-      box-shadow: 0 0 20px rgba(255, 0, 255, 0.1);
     }
 
     h1 {
       text-align: center;
-      color: #ff00ff;
+      color: #00f0ff;
     }
 
-    .product {
-      background-color: #21262d;
-      border-left: 5px solid #ff00ff;
+    .card {
+      background-color: #111;
+      border-radius: 15px;
       padding: 20px;
-      border-radius: 6px;
+      margin: 20px auto;
+      max-width: 500px;
+      box-shadow: 0 0 15px #00f0ff33;
     }
 
-    .product h2 {
-      margin-top: 0;
-      color: #ff00ff;
+    .item {
+      margin-bottom: 15px;
+      font-size: 16px;
     }
 
-    .product p {
-      margin: 10px 0;
-      line-height: 1.6;
+    .button-container {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-top: 20px;
     }
 
-    .add-to-cart {
-      margin-top: 15px;
-      padding: 12px 24px;
-      background-color: #ff00ff;
-      color: #0d1117;
+    button {
+      padding: 10px 20px;
+      background-color: #00f0ff;
       border: none;
-      border-radius: 5px;
+      border-radius: 10px;
+      color: #000;
+      font-weight: bold;
       cursor: pointer;
-      font-weight: bold;
-      transition: background-color 0.3s;
+      transition: 0.3s;
     }
 
-    .add-to-cart:hover {
-      background-color: #d100d1;
+    button:hover {
+      background-color: #00cce0;
     }
 
-    .back-btn {
-      display: block;
-      margin-top: 30px;
-      padding: 12px 25px;
-      background: #ff00ff;
-      color: #0d1117;
-      text-decoration: none;
-      font-weight: bold;
-      border-radius: 8px;
+    .footer {
       text-align: center;
-      box-shadow: 0 0 10px #ff00ff;
+      margin-top: 30px;
+      font-size: 14px;
+      color: #888;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="product">
-      <h2>𖤐 MURBAN 777 | INPOSIBLE'S 𖤐</h2>
-      <p>💸 <strong>Harga:</strong> RM10 — Permanent Access</p>
-      <p><strong>✦ 𝐏𝐀𝐊𝐄𝐓 𝐈𝐍𝐂𝐋𝐔𝐃𝐄𝐒 ✦</strong></p>
-      <ul>
-        <li>⚙️ APK Cek Ban</li>
-        <li>💣 APK Force Close</li>
-        <li>🧪 MT Fresh</li>
-        <li>🚀 MT Gacor</li>
-        <li>🔨 Kang Ban</li>
-        <li>💀 BAN Semua Orang Yang Lu Benci</li>
-        <li>📚 Full Tutorial (Ajar Sampai Faham)</li>
-      </ul>
-      <button class="add-to-cart" onclick="addToCart('MURBAN 777 - RM10')">Add to Cart</button>
-    </div>
 
-    <a href="produk.html" class="back-btn">⬅ Kembali ke Produk</a>
+  <h1>𖤐 MURBAN 777 | INPOSIBLE'S 𖤐</h1>
+
+  <div class="card">
+    <p><strong>💸 Harga:</strong> RM10 — Permanent Access</p>
+    <hr style="border-color: #444;">
+    <p>✦ 𝐏𝐀𝐊𝐄𝐓 𝐈𝐍𝐂𝐋𝐔𝐃𝐄𝐒 ✦</p>
+    <div class="item">⚙️ APK Cek Ban</div>
+    <div class="item">💣 APK Force Close</div>
+    <div class="item">🧪 MT Fresh</div>
+    <div class="item">🚀 MT Gacor</div>
+    <div class="item">🔨 Kang Ban</div>
+    <div class="item">💀 BAN Semua Orang Yang Lu Benci</div>
+    <div class="item">📚 Full Tutorial (Ajar Sampai Faham)</div>
+
+    <div class="button-container">
+      <button onclick="addToCart()">Add to Cart</button>
+      <button onclick="goBack()">Kembali</button>
+    </div>
   </div>
 
+  <div class="footer">From DAMX STORE</div>
+
   <script>
-    function addToCart(item) {
-      alert("✅ " + item + " telah dimasukkan ke dalam cart!");
-      let cart = JSON.parse(localStorage.getItem('cart')) || [];
-      cart.push(item);
-      localStorage.setItem('cart', JSON.stringify(cart));
+    function addToCart() {
+      alert("MURBAN 777 telah dimasukkan ke dalam cart ✔️");
+      // Anda boleh sambung fungsi ni ke localStorage atau backend jika perlu
+    }
+
+    function goBack() {
+      // Kembali ke halaman sebelum ini atau index.html
+      if (document.referrer) {
+        window.history.back();
+      } else {
+        window.location.href = "index.html";
+      }
     }
   </script>
+
 </body>
 </html>
