--- a/public/index.html
+++ b/public/index.html
@@ -1,70 +1,155 @@
-<!DOCTYPE html><html lang="id">
+<!DOCTYPE html>
+<html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DAMX STORE</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Produk by DAMX</title>
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #0a0a0a;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(135deg, #0d0d0d, #1a1a1a);
       color: #fff;
+      padding: 20px;
     }
-    header {
+
+    h1 {
       text-align: center;
-      padding: 30px 0;
-    }
-    header img {
-      width: 100px;
-      height: auto;
-    }
-    header h1 {
-      font-size: 28px;
-      margin-top: 10px;
       color: #00f0ff;
-      text-shadow: 0 0 5px #00f0ff;
+      text-shadow: 0 0 10px #00f0ff;
+      margin-bottom: 30px;
     }
-    .button-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+
+    .product-list {
+      display: flex;
+      flex-direction: column;
       gap: 20px;
-      padding: 20px;
-      max-width: 900px;
-      margin: 0 auto;
+      max-width: 500px;
+      margin: auto;
     }
-    .button-grid a {
-      display: block;
-      padding: 15px;
-      background-color: #00f0ff;
-      color: #000;
+
+    .product {
+      background: #111;
+      padding: 20px;
+      border-radius: 15px;
+      box-shadow: 0 0 10px #00f0ff33;
+    }
+
+    .product-title {
+      font-size: 18px;
       font-weight: bold;
-      text-align: center;
-      text-decoration: none;
-      border-radius: 10px;
-      box-shadow: 0 0 10px #00f0ff;
-      transition: transform 0.2s ease;
+      margin-bottom: 10px;
+      color: #00f0ff;
     }
-    .button-grid a:hover {
-      transform: scale(1.05);
+
+    .price {
+      color: #ccc;
+      margin-bottom: 15px;
     }
-    footer {
+
+    .btn-group {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+
+    button {
+      padding: 10px 15px;
+      background-color: #00f0ff;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      cursor: pointer;
+      color: #000;
+      transition: 0.3s;
+    }
+
+    button:hover {
+      background-color: #00cce0;
+    }
+
+    .cart-area {
+      margin-top: 40px;
       text-align: center;
-      padding: 20px;
+    }
+
+    .footer {
+      margin-top: 50px;
+      text-align: center;
       font-size: 14px;
-      color: #aaa;
+      color: #888;
     }
   </style>
 </head>
 <body>
-  <header>
-    <img src="https://files.catbox.moe/b5pfw2.jpg" alt="DAMX STORE Logo" />
-    <h1>DAMX STORE</h1>
-  </header>  <div class="button-grid">
-    <a href="bug-whatsapp.html">💣 SCRIPT BUG WHATSAPP</a>
-    <a href="panel.html">📡 PANEL BY DAMX</a>
-    <a href="murban.html">🎮 MURBAN 777</a>
-  </div>  <footer>
-    From DAMX STORE • Semua hak cipta dilindungi oleh tuan empunya
-  </footer>
+
+  <h1>🛒 PRODUK BY DAMX</h1>
+
+  <div class="product-list">
+
+    <div class="product">
+      <div class="product-title">SCRIPT BUG WHATSAPP</div>
+      <div class="price">RM10</div>
+      <div class="btn-group">
+        <button onclick="addToCart('SCRIPT BUG WHATSAPP', 10)">Add to Cart</button>
+        <button onclick="location.href='bugwhatsapp.html'">Lihat</button>
+      </div>
+    </div>
+
+    <div class="product">
+      <div class="product-title">PANEL BY DAMX</div>
+      <div class="price">RM15</div>
+      <div class="btn-group">
+        <button onclick="addToCart('PANEL BY DAMX', 15)">Add to Cart</button>
+        <button onclick="location.href='panel.html'">Lihat</button>
+      </div>
+    </div>
+
+    <div class="product">
+      <div class="product-title">MURBAN 777</div>
+      <div class="price">RM10</div>
+      <div class="btn-group">
+        <button onclick="addToCart('MURBAN 777', 10)">Add to Cart</button>
+        <button onclick="location.href='murban.html'">Lihat</button>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="cart-area">
+    <button onclick="checkCart()">🧾 Cek Cart & Jumlah Harga</button>
+    <div id="cart-result" style="margin-top: 15px; font-size: 16px;"></div>
+  </div>
+
+  <div class="footer">From DAMX STORE</div>
+
+  <script>
+    let cart = [];
+
+    function addToCart(item, price) {
+      cart.push({ item, price });
+      alert(`${item} telah ditambah ke dalam cart ✔️`);
+    }
+
+    function checkCart() {
+      if (cart.length === 0) {
+        document.getElementById('cart-result').innerHTML = "Cart kosong 😢";
+        return;
+      }
+
+      let result = "<strong>Isi Cart:</strong><br>";
+      let total = 0;
+
+      cart.forEach((c, i) => {
+        result += `• ${c.item} — RM${c.price}<br>`;
+        total += c.price;
+      });
+
+      result += `<br><strong>Jumlah:</strong> RM${total}`;
+      document.getElementById('cart-result').innerHTML = result;
+    }
+  </script>
+
 </body>
 </html>
