--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Produk by DAMX</title>
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(135deg, #0d0d0d, #1a1a1a);
+      background: #0a0a0a;
       color: #fff;
       padding: 20px;
     }
 
     h1 {
       text-align: center;
-      color: #00f0ff;
-      text-shadow: 0 0 10px #00f0ff;
+      color: #00ffff;
+      text-shadow: 0 0 10px #00ffff;
       margin-bottom: 30px;
     }
 
@@ -32,14 +32,14 @@
       background: #111;
       padding: 20px;
       border-radius: 15px;
-      box-shadow: 0 0 10px #00f0ff33;
+      box-shadow: 0 0 10px #00f0ff44;
     }
 
     .product-title {
       font-size: 18px;
       font-weight: bold;
       margin-bottom: 10px;
-      color: #00f0ff;
+      color: #00ffff;
     }
 
     .price {
@@ -56,7 +56,7 @@
 
     button {
       padding: 10px 15px;
-      background-color: #00f0ff;
+      background-color: #00ffff;
       border: none;
       border-radius: 8px;
       font-weight: bold;
@@ -66,7 +66,7 @@
     }
 
     button:hover {
-      background-color: #00cce0;
+      background-color: #00cccc;
     }
 
     .cart-area {
@@ -89,10 +89,10 @@
   <div class="product-list">
 
     <div class="product">
-      <div class="product-title">SCRIPT BUG WHATSAPP</div>
+      <div class="product-title">BUG WHATSAPP</div>
       <div class="price">RM10</div>
       <div class="btn-group">
-        <button onclick="addToCart('SCRIPT BUG WHATSAPP', 10)">Add to Cart</button>
+        <button onclick="addToCart('BUG WHATSAPP', 10)">Add to Cart</button>
         <button onclick="location.href='bugwhatsapp.html'">Lihat</button>
       </div>
     </div>
@@ -108,9 +108,9 @@
 
     <div class="product">
       <div class="product-title">MURBAN 777</div>
-      <div class="price">RM10</div>
+      <div class="price">RM12</div>
       <div class="btn-group">
-        <button onclick="addToCart('MURBAN 777', 10)">Add to Cart</button>
+        <button onclick="addToCart('MURBAN 777', 12)">Add to Cart</button>
         <button onclick="location.href='murban.html'">Lihat</button>
       </div>
     </div>
