--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     .product-list {
       display: flex;
       flex-direction: column;
-      gap: 25px;
+      gap: 20px;
       max-width: 600px;
       margin: 0 auto;
     }
@@ -41,12 +41,11 @@
       color: #00ffff;
     }
 
-    .product-btn {
+    .btn {
       margin-top: 15px;
-      padding: 10px;
-      width: 100%;
+      padding: 8px 12px;
       border: none;
-      border-radius: 10px;
+      border-radius: 8px;
       background: #00ffff;
       color: black;
       font-weight: bold;
@@ -54,8 +53,30 @@
       transition: 0.3s;
     }
 
-    .product-btn:hover {
+    .btn:hover {
       background: #00cccc;
+    }
+
+    .price-box {
+      margin-top: 10px;
+      padding: 10px;
+      background: #222;
+      border-radius: 10px;
+      display: none;
+    }
+
+    .cart-btn {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: #00ffff;
+      color: black;
+      border: none;
+      padding: 10px 16px;
+      border-radius: 20px;
+      font-weight: bold;
+      box-shadow: 0 0 10px #00ffff88;
+      cursor: pointer;
     }
 
     .cart-box {
@@ -82,14 +103,14 @@
     }
 
     .total {
-      margin-top: 15px;
+      margin-top: 10px;
       font-weight: bold;
       color: #00ffcc;
     }
 
     .footer {
       text-align: center;
-      margin-top: 50px;
+      margin-top: 60px;
       color: #888;
       font-size: 14px;
     }
@@ -100,48 +121,65 @@
   <h1>🛍️ Produk by DAMX</h1>
 
   <div class="product-list">
+
     <div class="product-box">
       <div class="product-title">SCRIPT BUG WHATSAPP</div>
-      <button class="product-btn" onclick="location.href='bugwhatsapp.html'">Lihat Produk</button>
+      <button class="btn" onclick="togglePrice('bug')">Lihat Harga</button>
+      <div class="price-box" id="price-bug">
+        <p>Harga: RM5.00</p>
+        <button class="btn" onclick="addToCart('SCRIPT BUG WHATSAPP', 5)">Add to Cart</button>
+      </div>
     </div>
 
     <div class="product-box">
       <div class="product-title">PANEL BY DAMX</div>
-      <button class="product-btn" onclick="location.href='panel.html'">Lihat Produk</button>
+      <button class="btn" onclick="togglePrice('panel')">Lihat Harga</button>
+      <div class="price-box" id="price-panel">
+        <p>Harga: RM10.00</p>
+        <button class="btn" onclick="addToCart('PANEL BY DAMX', 10)">Add to Cart</button>
+      </div>
     </div>
 
     <div class="product-box">
       <div class="product-title">MURBAN 777</div>
-      <button class="product-btn" onclick="location.href='murban.html'">Lihat Produk</button>
+      <button class="btn" onclick="togglePrice('murban')">Lihat Harga</button>
+      <div class="price-box" id="price-murban">
+        <p>Harga: RM7.00</p>
+        <button class="btn" onclick="addToCart('MURBAN 777', 7)">Add to Cart</button>
+      </div>
     </div>
 
-    <div class="product-box">
-      <div class="product-title">🛒 Lihat Cart</div>
-      <button class="product-btn" onclick="showCart()">Lihat Cart Sekarang</button>
-    </div>
   </div>
 
+  <!-- CART BUTTON -->
+  <button class="cart-btn" onclick="showCart()">🛒 Cek Cart</button>
+
+  <!-- CART BOX -->
   <div id="cart" class="cart-box" style="display:none;">
     <div class="cart-title">📦 Cart Anda</div>
     <div id="cart-items"></div>
     <div class="total" id="cart-total">Total: RM 0.00</div>
   </div>
 
-  <div class="footer">
-    From DAMX STORE
-  </div>
+  <div class="footer">From DAMX STORE</div>
 
   <script>
-    // Ambil cart dari localStorage
-    function getCart() {
-      return JSON.parse(localStorage.getItem("cart")) || [];
+    function togglePrice(id) {
+      const box = document.getElementById("price-" + id);
+      box.style.display = (box.style.display === "block") ? "none" : "block";
     }
 
-    // Papar cart bila klik "Lihat Cart"
+    function addToCart(name, price) {
+      const cart = JSON.parse(localStorage.getItem("cart")) || [];
+      cart.push({ name, price });
+      localStorage.setItem("cart", JSON.stringify(cart));
+      alert(name + " ditambah ke cart!");
+    }
+
     function showCart() {
-      const cart = getCart();
-      const cartItems = document.getElementById("cart-items");
+      const cart = JSON.parse(localStorage.getItem("cart")) || [];
       const cartBox = document.getElementById("cart");
+      const cartItems = document.getElementById("cart-items");
       const cartTotal = document.getElementById("cart-total");
 
       cartItems.innerHTML = "";
@@ -153,7 +191,7 @@
         cart.forEach(item => {
           const div = document.createElement("div");
           div.className = "cart-item";
-          div.innerText = `• ${item.name} - RM ${item.price.toFixed(2)}`;
+          div.textContent = `• ${item.name} - RM ${item.price.toFixed(2)}`;
           cartItems.appendChild(div);
           total += item.price;
         });
