--- a/public/index.html
+++ b/public/index.html
@@ -1,62 +1,86 @@
-<!DOCTYPE html>
-<html lang="id">
+<!DOCTYPE html><html lang="id">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DAMX STORE - Halaman Utama</title>
+  <title>Produk by DAMX STORE</title>
   <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: #0d0d0d;
-      color: white;
-      text-align: center;
-      padding: 50px 20px;
-    }
+    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap');* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-    h1 {
-      color: #00ffff;
-      text-shadow: 0 0 10px #00ffff;
-      margin-bottom: 50px;
-    }
+body {
+  font-family: 'Orbitron', sans-serif;
+  background: linear-gradient(270deg, #0f0c29, #302b63, #24243e);
+  background-size: 600% 600%;
+  animation: gradientBG 15s ease infinite;
+  color: #fff;
+  min-height: 100vh;
+  padding: 2rem;
+  text-align: center;
+}
 
-    .btn {
-      display: block;
-      width: 250px;
-      margin: 20px auto;
-      padding: 15px;
-      background: #00ffff;
-      color: black;
-      border: none;
-      border-radius: 30px;
-      font-size: 18px;
-      font-weight: bold;
-      cursor: pointer;
-      box-shadow: 0 0 15px #00ffffaa;
-      transition: 0.3s;
-    }
+@keyframes gradientBG {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
 
-    .btn:hover {
-      background: #00cccc;
-      box-shadow: 0 0 25px #00cccccc;
-    }
+h1 {
+  font-size: 2.5rem;
+  margin-bottom: 2rem;
+  text-shadow: 0 0 10px #00ffff;
+}
 
-    .footer {
-      margin-top: 80px;
-      color: #888;
-      font-size: 14px;
-    }
+.button-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.product-button {
+  background: #111;
+  border: 2px solid #00ffff;
+  color: #00ffff;
+  padding: 1rem 2rem;
+  border-radius: 15px;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: all 0.3s ease;
+  box-shadow: 0 0 15px rgba(0, 255, 255, 0.5);
+}
+
+.product-button:hover {
+  background: #00ffff;
+  color: #111;
+  transform: scale(1.05);
+}
+
+.cart-btn {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background: #00ffff;
+  color: #000;
+  padding: 10px 20px;
+  border-radius: 30px;
+  box-shadow: 0 0 15px #00ffff;
+  border: none;
+  font-weight: bold;
+  cursor: pointer;
+}
+
   </style>
 </head>
 <body>
-
-  <h1>🛍️ Produk by DAMX STORE</h1>
-
-  <button class="btn" onclick="location.href='bug.html'">BUG WHATSAPP</button>
-  <button class="btn" onclick="location.href='panel.html'">PANEL BY DAMX</button>
-  <button class="btn" onclick="location.href='murban.html'">MURBAN 777</button>
-
-  <div class="footer">From DAMX STORE</div>
+  <h1>Produk by DAMX STORE</h1>
+  <div class="button-container">
+    <button class="product-button" onclick="window.location.href='bug.html'">SCRIPT BUG WHATSAPP</button>
+    <button class="product-button" onclick="window.location.href='panel.html'">PANEL BY DAMX</button>
+    <button class="product-button" onclick="window.location.href='murban.html'">MURBAN 777</button>
+  </div><button class="cart-btn" onclick="window.location.href='cart.html'">🛒 LIHAT CART</button>
 
 </body>
 </html>
