--- a/public/index.html
+++ b/public/index.html
@@ -1,86 +1,112 @@
-<!DOCTYPE html><html lang="id">
+<!DOCTYPE html>
+<html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Produk by DAMX STORE</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap');* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
-body {
-  font-family: 'Orbitron', sans-serif;
-  background: linear-gradient(270deg, #0f0c29, #302b63, #24243e);
-  background-size: 600% 600%;
-  animation: gradientBG 15s ease infinite;
-  color: #fff;
-  min-height: 100vh;
-  padding: 2rem;
-  text-align: center;
-}
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-@keyframes gradientBG {
-  0% { background-position: 0% 50%; }
-  50% { background-position: 100% 50%; }
-  100% { background-position: 0% 50%; }
-}
+    body {
+      font-family: 'Poppins', sans-serif;
+      color: #fff;
+      background: linear-gradient(120deg, #0d0d2b, #1a1a40, #0f0f2d);
+      background-size: 600% 600%;
+      animation: galaxy 20s ease infinite;
+      min-height: 100vh;
+      padding: 20px;
+    }
 
-h1 {
-  font-size: 2.5rem;
-  margin-bottom: 2rem;
-  text-shadow: 0 0 10px #00ffff;
-}
+    @keyframes galaxy {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
 
-.button-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 1rem;
-}
+    header {
+      text-align: center;
+      margin-bottom: 30px;
+    }
 
-.product-button {
-  background: #111;
-  border: 2px solid #00ffff;
-  color: #00ffff;
-  padding: 1rem 2rem;
-  border-radius: 15px;
-  cursor: pointer;
-  font-size: 1rem;
-  transition: all 0.3s ease;
-  box-shadow: 0 0 15px rgba(0, 255, 255, 0.5);
-}
+    header img {
+      width: 100px;
+      border-radius: 50%;
+      box-shadow: 0 0 20px rgba(255, 255, 255, 0.3);
+    }
 
-.product-button:hover {
-  background: #00ffff;
-  color: #111;
-  transform: scale(1.05);
-}
+    h1 {
+      margin-top: 15px;
+      font-size: 28px;
+      color: #fff;
+      text-shadow: 0 0 10px #00ffff;
+    }
 
-.cart-btn {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  background: #00ffff;
-  color: #000;
-  padding: 10px 20px;
-  border-radius: 30px;
-  box-shadow: 0 0 15px #00ffff;
-  border: none;
-  font-weight: bold;
-  cursor: pointer;
-}
+    .product-buttons {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      align-items: center;
+    }
 
+    .product-buttons button {
+      background-color: #111133;
+      border: 1px solid #00ffff;
+      color: #00ffff;
+      padding: 15px 30px;
+      border-radius: 10px;
+      font-size: 18px;
+      cursor: pointer;
+      transition: 0.3s;
+      width: 90%;
+      max-width: 400px;
+      box-shadow: 0 0 10px #00ffff88;
+    }
+
+    .product-buttons button:hover {
+      background-color: #00ffff;
+      color: #111133;
+      box-shadow: 0 0 20px #00ffffaa;
+    }
+
+    .cart-button {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: #00ffff;
+      color: #111;
+      padding: 10px 20px;
+      border-radius: 30px;
+      border: none;
+      font-weight: bold;
+      box-shadow: 0 0 15px #00ffffaa;
+      cursor: pointer;
+    }
+
+    .cart-button:hover {
+      background: #00dada;
+    }
   </style>
 </head>
 <body>
-  <h1>Produk by DAMX STORE</h1>
-  <div class="button-container">
-    <button class="product-button" onclick="window.location.href='bug.html'">SCRIPT BUG WHATSAPP</button>
-    <button class="product-button" onclick="window.location.href='panel.html'">PANEL BY DAMX</button>
-    <button class="product-button" onclick="window.location.href='murban.html'">MURBAN 777</button>
-  </div><button class="cart-btn" onclick="window.location.href='cart.html'">🛒 LIHAT CART</button>
+
+  <header>
+    <img src="https://files.catbox.moe/b5pfw2.jpg" alt="DAMX STORE Logo" />
+    <h1>PRODUK BY DAMX STORE</h1>
+  </header>
+
+  <section class="product-buttons">
+    <button onclick="window.location.href='bug.html'">SCRIPT BUG WHATSAPP</button>
+    <button onclick="window.location.href='panel.html'">PANEL BY DAMX</button>
+    <button onclick="window.location.href='murban.html'">MURBAN 777</button>
+  </section>
+
+  <button class="cart-button" onclick="window.location.href='cart.html'">🛒 Cek Cart</button>
 
 </body>
 </html>
