--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,12 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
-    * { margin: 0; padding: 0; box-sizing: border-box; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
     body {
       font-family: 'Poppins', sans-serif;
       color: #fff;
@@ -38,6 +43,7 @@
     h1 {
       margin-top: 15px;
       font-size: 28px;
+      color: #fff;
       text-shadow: 0 0 10px #00ffff;
     }
 
@@ -85,54 +91,6 @@
     .cart-button:hover {
       background: #00dada;
     }
-
-    /* Modal styles */
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 99;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0,0,0,0.7);
-    }
-
-    .modal-content {
-      background: #1e1e3f;
-      margin: 10% auto;
-      padding: 20px;
-      border-radius: 15px;
-      width: 90%;
-      max-width: 400px;
-      box-shadow: 0 0 20px #00ffff88;
-    }
-
-    .modal-content h2 {
-      margin-bottom: 10px;
-      color: #00ffff;
-    }
-
-    .modal-content ul {
-      list-style: none;
-      padding-left: 0;
-      margin-bottom: 15px;
-    }
-
-    .modal-content ul li {
-      padding: 5px 0;
-      border-bottom: 1px solid #00ffff33;
-    }
-
-    .close-btn {
-      background: #00ffff;
-      color: #111;
-      padding: 8px 16px;
-      border: none;
-      border-radius: 10px;
-      font-weight: bold;
-      cursor: pointer;
-    }
   </style>
 </head>
 <body>
@@ -143,52 +101,12 @@
   </header>
 
   <section class="product-buttons">
-    <button onclick="addToCart('SCRIPT BUG WHATSAPP', 10)">SCRIPT BUG WHATSAPP</button>
-    <button onclick="addToCart('PANEL BY DAMX', 15)">PANEL BY DAMX</button>
-    <button onclick="addToCart('MURBAN 777', 10)">MURBAN 777</button>
+    <button onclick="window.location.href='bug.html'">SCRIPT BUG WHATSAPP</button>
+    <button onclick="window.location.href='panel.html'">PANEL BY DAMX</button>
+    <button onclick="window.location.href='murban.html'">MURBAN 777</button>
   </section>
 
-  <button class="cart-button" onclick="openCart()">🛒 Cek Cart</button>
-
-  <!-- Modal -->
-  <div id="cartModal" class="modal">
-    <div class="modal-content">
-      <h2>🛍️ Cart Anda</h2>
-      <ul id="cartList"></ul>
-      <p><strong>Jumlah Harga:</strong> RM <span id="totalPrice">0</span></p>
-      <button class="close-btn" onclick="closeCart()">Tutup</button>
-    </div>
-  </div>
-
-  <script>
-    let cart = [];
-
-    function addToCart(product, price) {
-      cart.push({ product, price });
-      alert(product + " berjaya dimasukkan ke cart!");
-    }
-
-    function openCart() {
-      const list = document.getElementById('cartList');
-      const total = document.getElementById('totalPrice');
-      list.innerHTML = '';
-      let sum = 0;
-
-      cart.forEach(item => {
-        const li = document.createElement('li');
-        li.textContent = `${item.product} - RM${item.price}`;
-        list.appendChild(li);
-        sum += item.price;
-      });
-
-      total.textContent = sum;
-      document.getElementById('cartModal').style.display = 'block';
-    }
-
-    function closeCart() {
-      document.getElementById('cartModal').style.display = 'none';
-    }
-  </script>
+  <button class="cart-button" onclick="window.location.href='cart.html'">🛒 Cek Cart</button>
 
 </body>
 </html>
