--- a/public/index.html
+++ b/public/index.html
@@ -107,8 +107,22 @@
   </section>
 
 <script>
+  <!-- CART MODAL -->
+<div id="cartModal" style="display:none;position:fixed;top:15%;left:50%;transform:translateX(-50%);background:#000;color:#fff;padding:20px;border-radius:10px;z-index:999;box-shadow:0 0 15px #00ffe1;">
+  <h3>Cart Anda</h3>
+  <ul id="cartList" style="list-style:none;padding:0;"></ul>
+  <p>Total: RM <span id="totalPrice">0</span></p>
+  <button onclick="closeCart()" style="padding:10px 15px;background:#00ffe1;color:#000;border:none;border-radius:8px;cursor:pointer;">Tutup</button>
+</div>
+
+<!-- CEK CART BUTTON -->
+<button onclick="openCart()" style="margin-top:20px;padding:10px 20px;background:#00ffe1;color:#000;border:none;border-radius:10px;font-weight:bold;box-shadow:0 0 10px #00ffe1;cursor:pointer;">🛒 Cek Cart</button>
+
+<script>
   let cart = [];
 
+  // Contoh add item (letak kat button produk)
+  // addToCart('SCRIPT BUG WHATSAPP', 10);
   function addToCart(product, price) {
     cart.push({ product, price });
     alert(product + ' ditambah ke cart!');
@@ -133,6 +147,5 @@
     document.getElementById('cartModal').style.display = 'none';
   }
 </script>
-
 </body>
 </html>
