--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,14 @@
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(120deg, #0d0d2b, #1a1a40, #0f0f2d);
-      background-size: 600% 600%;
-      animation: galaxy 20s ease infinite;
-      min-height: 100vh;
+      background: linear-gradient(-45deg, #1d1d30, #0c0c3f, #1a1a2e);
+      background-size: 400% 400%;
+      animation: moveBg 15s ease infinite;
+      color: white;
       padding: 20px;
-      color: #fff;
+      min-height: 100vh;
     }
-    @keyframes galaxy {
+    @keyframes moveBg {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
@@ -28,108 +28,52 @@
     header img {
       width: 100px;
       border-radius: 50%;
-      box-shadow: 0 0 20px rgba(255, 255, 255, 0.3);
+      box-shadow: 0 0 15px cyan;
     }
     h1 {
-      margin-top: 15px;
+      margin-top: 10px;
       font-size: 28px;
-      color: #fff;
+      color: #00ffff;
       text-shadow: 0 0 10px #00ffff;
     }
-    .product-buttons {
+    .buttons {
       display: flex;
       flex-direction: column;
-      gap: 15px;
       align-items: center;
+      gap: 20px;
     }
-    .product-buttons button {
-      background-color: #111133;
-      border: 1px solid #00ffff;
-      color: #00ffff;
+    .buttons button {
+      background: transparent;
+      border: 2px solid #00ffff;
       padding: 15px 30px;
-      border-radius: 10px;
       font-size: 18px;
+      color: #00ffff;
+      border-radius: 10px;
       cursor: pointer;
-      transition: 0.3s;
+      transition: 0.3s ease;
       width: 90%;
       max-width: 400px;
-      box-shadow: 0 0 10px #00ffff88;
+      box-shadow: 0 0 10px #00ffff80;
     }
-    .product-buttons button:hover {
-      background-color: #00ffff;
-      color: #111133;
-      box-shadow: 0 0 20px #00ffffaa;
-    }
-    .cart-button {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
+    .buttons button:hover {
       background: #00ffff;
-      color: #111;
-      padding: 10px 20px;
-      border-radius: 30px;
-      border: none;
-      font-weight: bold;
-      box-shadow: 0 0 15px #00ffffaa;
-      cursor: pointer;
-    }
-    .cart-button:hover {
-      background: #00dada;
+      color: #000;
+      box-shadow: 0 0 20px #00ffffcc;
     }
   </style>
 </head>
 <body>
 
   <header>
-    <img src="https://files.catbox.moe/b5pfw2.jpg" alt="DAMX STORE Logo" />
+    <img src="https://files.catbox.moe/b5pfw2.jpg" alt="Logo DAMX STORE">
     <h1>PRODUK BY DAMX STORE</h1>
   </header>
 
-  <section class="product-buttons">
-    <button onclick="addToCartAndRedirect('SCRIPT BUG WHATSAPP', 15, 'bug.html')">SCRIPT BUG WHATSAPP</button>
-    <button onclick="addToCartAndRedirect('PANEL BY DAMX', 20, 'panel.html')">PANEL BY DAMX</button>
-    <button onclick="addToCartAndRedirect('MURBAN 777', 30, 'murban.html')">MURBAN 777</button>
-  </section>
-
-  <!-- CART BUTTON -->
-  <button class="cart-button" onclick="openCart()">🛒 Cek Cart</button>
-
-  <!-- CART MODAL -->
-  <div id="cartModal" style="display:none;position:fixed;top:15%;left:50%;transform:translateX(-50%);background:#000;color:#fff;padding:20px;border-radius:10px;z-index:999;box-shadow:0 0 15px #00ffe1;">
-    <h3 style="margin-bottom:10px;">Cart Anda</h3>
-    <ul id="cartList" style="list-style:none;padding:0;margin-bottom:10px;"></ul>
-    <p>Total: RM <span id="totalPrice">0</span></p>
-    <button onclick="closeCart()" style="margin-top:10px;padding:8px 15px;background:#00ffe1;color:#000;border:none;border-radius:8px;cursor:pointer;">Tutup</button>
+  <div class="buttons">
+    <button onclick="window.location.href='bug.html'">SCRIPT BUG WHATSAPP</button>
+    <button onclick="window.location.href='panel.html'">PANEL BY DAMX</button>
+    <button onclick="window.location.href='murban.html'">MURBAN 777</button>
   </div>
-
-  <script>
-    let cart = [];
-
-    function addToCartAndRedirect(product, price, link) {
-      cart.push({ product, price });
-      alert(product + ' ditambah ke cart!');
-      window.location.href = link;
-    }
-
-    function openCart() {
-      const list = document.getElementById('cartList');
-      const total = document.getElementById('totalPrice');
-      list.innerHTML = '';
-      let sum = 0;
-      cart.forEach(item => {
-        const li = document.createElement('li');
-        li.textContent = `${item.product} - RM${item.price}`;
-        list.appendChild(li);
-        sum += item.price;
-      });
-      total.textContent = sum;
-      document.getElementById('cartModal').style.display = 'block';
-    }
-
-    function closeCart() {
-      document.getElementById('cartModal').style.display = 'none';
-    }
-  </script>
 
 </body>
 </html>
